--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/camera": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
+    "chart.js": "^3.7.1",
     "cordova-plugin-browsertab": "^0.2.0",
     "jsbarcode": "^3.11.5",
     "ngx-webcam": "^0.4.1",
