--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chart.js": "^3.7.1",
     "cordova-plugin-browsertab": "^0.2.0",
     "jsbarcode": "^3.11.5",
+    "ngx-editor": "^12.2.1",
     "ngx-webcam": "^0.4.1",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
