--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "moldingApp",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "author": "DAHER by Joris GRANGIER",
-  "homepage": "https://ionicframework.com/",
+  "homepage": "",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
