--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jsbarcode": "^3.11.5",
     "jspdf": "^2.5.1",
     "ngx-editor": "^12.2.1",
+    "ngx-socket-io": "^4.2.0",
     "ngx-webcam": "^0.4.1",
     "pdfmake": "^0.2.4",
     "phonegap-plugin-barcodescanner": "^8.1.0",
