--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               {
                 "glob": "**/*",
                 "input": "node_modules/tinymce",
-                "output": "/tinymce/"
+                "output": "tinymce/"
               },
               {
                 "glob": "**/*.svg",
@@ -41,9 +41,7 @@
               "src/theme/variables.scss",
               "src/global.scss"
             ],
-            "scripts": [
-              "node_modules/tinymce/tinymce.min.js"
-            ],
+            "scripts": [],
             "aot": false,
             "vendorChunk": true,
             "extractLicenses": false,
