--- a/angular.json
+++ b/angular.json
@@ -15,6 +15,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "moldingApp",
+            "baseHref": "",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -75,7 +76,7 @@
                   "maximumError": "5mb"
                 }
               ],
-              "baseHref": "./"
+              "baseHref": ""
             },
             "qual": {
               "outputPath": "moldingAppQual",
@@ -100,7 +101,7 @@
                   "maximumError": "5mb"
                 }
               ],
-              "baseHref": "./"
+              "baseHref": ""
             },
             "ci": {
               "progress": false
