--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref": "./",
+            "baseHref": "/",
             "outputPath": "moldingApp",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -100,7 +100,7 @@
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
-              ],
+              ]
             },
             "ci": {
               "progress": false
