--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref": "/",
+            "baseHref": "./",
             "outputPath": "moldingApp",
             "index": "src/index.html",
             "main": "src/main.ts",
