--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "homepage": "",
   "scripts": {
     "ng": "ng",
-    "start": "ionic serve",
+    "start": "ionic serve cypress:open",
     "build": "ionic build --prod & ionic build --configuration=qual",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open"
   },
   "private": true,
   "dependencies": {
@@ -24,10 +25,6 @@
     "@angular/router": "~14.0.3",
     "@angular/service-worker": "~14.0.3",
     "@awesome-cordova-plugins/barcode-scanner": "^5.39.1",
-    "@capacitor/android": "^3.4.1",
-    "@capacitor/app": "1.1.0",
-    "@capacitor/camera": "^1.3.0",
-    "@capacitor/core": "3.4.0",
     "@capacitor/filesystem": "^1.1.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
@@ -74,6 +71,7 @@
     "@angular/language-service": "~14.0.3",
     "@capacitor/cli": "3.4.0",
     "@ionic/angular-toolkit": "^5.0.0",
+    "@tsconfig/cypress": "^1.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
