molding securisations _sauvegarde ==> un seul bouton _titre de la page dynamique pour afficher le numéro du moulage en cas d'édition => Création d'un service dédié

--- a/angular.json
+++ b/angular.json
@@ -198,7 +198,10 @@
           "builder": "@ionic/angular-toolkit:cordova-serve",
           "options": {
             "cordovaBuildTarget": "app:ionic-cordova-build",
-            "devServerTarget": "app:serve"
+            "devServerTarget": "app:serve",
+            "ssl": true,
+            "sslCert": "./localhost.crt",
+            "sslKey": "./localhost.key"
           },
           "configurations": {
             "production": {
