--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,5 @@ jobs:
     - run: npm ci
     - run: npm i -g ionic
     - run: npm i --save @capacitor/core @capacitor/cli
-    - run: ionic build --if-present
+    - run: ionic build --configuration qual --if-present
    # - run: npm test
