--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "build:ci": "ionic build --configuration=qual --base-href /TEST/"
   },
   "private": true,
   "dependencies": {
