--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moldingApp",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "author": "DAHER by Joris GRANGIER",
   "homepage": "",
   "scripts": {
@@ -25,6 +25,7 @@
     "@angular/material": "^14.1.3",
     "@angular/platform-browser": "~14.1.3",
     "@angular/platform-browser-dynamic": "~14.1.3",
+    "@angular/pwa": "^15.0.3",
     "@angular/router": "~14.1.3",
     "@angular/service-worker": "~14.1.3",
     "@awesome-cordova-plugins/barcode-scanner": "^5.39.1",
@@ -38,7 +39,8 @@
     "@ionic-native/file": "^5.36.0",
     "@ionic-native/file-opener": "^5.36.0",
     "@ionic-native/pdf-generator": "^5.36.0",
-    "@ionic/angular": "^6.0.0",
+    "@ionic/angular": "^6.4.0",
+    "@ionic/lab": "^3.2.15",
     "@ionic/pwa-elements": "^3.1.1",
     "@tinymce/tinymce-angular": "^6.0.1",
     "@types/dom-to-image": "^2.6.4",
@@ -52,11 +54,11 @@
     "dom-to-image": "^2.6.0",
     "jsbarcode": "^3.11.5",
     "jspdf": "^2.5.1",
-    "ngx-socket-io": "^4.2.0",
     "ngx-webcam": "^0.4.1",
     "pdfmake": "^0.2.4",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.5.4",
     "swiper": "^8.0.6",
     "tinymce": "^6.0.2",
     "tslib": "^2.2.0",
