correction package.json

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
-    "build-p-q": "npm run build-p && npm run build-q"
+    "build-p-q": "npm run build-p && npm run build-q",
     "build:ci": "ionic build --configuration=qual --base-href /TEST/"
   },
   "private": true,
