--- a/package.json
+++ b/package.json
@@ -22,89 +22,78 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.1.3",
-    "@angular/cdk": "^14.1.3",
-    "@angular/common": "~14.1.3",
-    "@angular/core": "~14.1.3",
-    "@angular/forms": "~14.1.3",
-    "@angular/material": "^14.1.3",
-    "@angular/platform-browser": "~14.1.3",
-    "@angular/platform-browser-dynamic": "~14.1.3",
-    "@angular/pwa": "^0.5.3",
-    "@angular/router": "~14.1.3",
-    "@angular/service-worker": "~14.1.3",
-    "@awesome-cordova-plugins/barcode-scanner": "^5.39.1",
-    "@capacitor/filesystem": "^1.1.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.1",
-    "@capacitor/status-bar": "1.0.7",
-    "@ionic-native/browser-tab": "^5.36.0",
-    "@ionic-native/camera": "^5.36.0",
-    "@ionic-native/core": "^5.36.0",
-    "@ionic-native/file": "^5.36.0",
-    "@ionic-native/file-opener": "^5.36.0",
-    "@ionic-native/pdf-generator": "^5.36.0",
-    "@ionic/angular": "^6.4.0",
+    "@angular/animations": "~15.2.10",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "~15.2.10",
+    "@angular/core": "~15.2.10",
+    "@angular/forms": "~15.2.10",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "~15.2.10",
+    "@angular/platform-browser-dynamic": "~15.2.10",
+    "@angular/router": "~15.2.10",
+    "@angular/service-worker": "~15.2.10",
+    "@awesome-cordova-plugins/barcode-scanner": "^6.4.0",
+    "@awesome-cordova-plugins/browser-tab": "^6.4.0",
+    "@awesome-cordova-plugins/camera": "^6.4.0",
+    "@awesome-cordova-plugins/core": "^6.4.0",
+    "@awesome-cordova-plugins/file": "^6.4.0",
+    "@awesome-cordova-plugins/file-opener": "^6.4.0",
+    "@capacitor/camera": "^4.1.4",
+    "@capacitor/filesystem": "^4.1.5",
+    "@capacitor/haptics": "^4.1.0",
+    "@capacitor/keyboard": "^4.1.1",
+    "@capacitor/status-bar": "^4.1.1",
+    "@ionic/angular": "^6.7.5",
     "@ionic/lab": "^3.2.15",
-    "@ionic/pwa-elements": "^3.1.1",
-    "@tinymce/tinymce-angular": "^6.0.1",
+    "@ionic/pwa-elements": "^3.2.2",
+    "@tinymce/tinymce-angular": "^7.0.0",
     "@types/dom-to-image": "^2.6.4",
     "@types/jspdf": "^2.0.0",
-    "chart.js": "^3.7.1",
-    "chartjs-plugin-datalabels": "^2.0.0",
-    "cordova-pdf-generator": "^2.1.1",
-    "cordova-plugin-browsertab": "^0.2.0",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-file-opener2": "^3.0.5",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dom-to-image": "^2.6.0",
     "jsbarcode": "^3.11.5",
     "jspdf": "^2.5.1",
     "ngx-webcam": "^0.4.1",
-    "pdfmake": "^0.2.4",
+    "pdfmake": "^0.2.9",
     "phonegap-plugin-barcodescanner": "^8.1.0",
-    "rxjs": "~6.6.0",
-    "socket.io-client": "^4.5.4",
-    "swiper": "^8.0.6",
-    "tinymce": "^6.0.2",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.8.1",
+    "socket.io-client": "^4.6.1",
+    "swiper": "^8.4.7",
+    "tinymce": "^6.8.2",
+    "tslib": "^2.6.2",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.3",
-    "@angular-eslint/builder": "~13.0.1",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~14.1.3",
-    "@angular/compiler": "~14.1.3",
-    "@angular/compiler-cli": "~14.1.3",
-    "@angular/language-service": "~14.1.3",
-    "@capacitor/cli": "3.4.0",
-    "@ionic/angular-toolkit": "^5.0.0",
+    "@angular-devkit/build-angular": "^15.2.10",
+    "@angular-eslint/builder": "~15.2.1",
+    "@angular-eslint/eslint-plugin": "~15.2.1",
+    "@angular-eslint/eslint-plugin-template": "~15.2.1",
+    "@angular-eslint/template-parser": "~15.2.1",
+    "@angular/cli": "~15.2.10",
+    "@angular/compiler": "~15.2.10",
+    "@angular/compiler-cli": "~15.2.10",
+    "@angular/language-service": "~15.2.10",
+    "@capacitor/cli": "^4.8.0",
+    "@ionic/angular-toolkit": "^9.0.0",
     "@tsconfig/cypress": "^1.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "cypress": "^10.8.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "json-server": "^0.17.1",
-    "karma": "^6.3.19",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "nodemon": "^2.0.20",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.7.4"
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.19.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "cypress": "^12.17.4",
+    "eslint": "^8.56.0",
+    "jasmine-core": "~4.6.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "json-server": "^0.17.4",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~4.9.5"
   },
   "description": "An Ionic project"
 }
