--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "@awesome-cordova-plugins/core": "^6.4.0",
     "@awesome-cordova-plugins/file": "^6.4.0",
     "@awesome-cordova-plugins/file-opener": "^6.4.0",
+    "@capacitor/android": "^4.8.2",
     "@capacitor/camera": "^4.1.4",
+    "@capacitor/core": "^4.8.2",
     "@capacitor/filesystem": "^4.1.5",
     "@capacitor/haptics": "^4.1.0",
+    "@capacitor/ios": "^4.8.2",
     "@capacitor/keyboard": "^4.1.1",
     "@capacitor/status-bar": "^4.1.1",
     "@ionic/angular": "^6.7.5",
@@ -74,8 +77,8 @@
     "@angular/compiler": "~17.3.12",
     "@angular/compiler-cli": "~17.3.12",
     "@angular/language-service": "~17.3.12",
-    "@capacitor/cli": "^4.8.0",
-    "@ionic/angular-toolkit": "^9.0.0",
+    "@capacitor/cli": "^4.8.2",
+    "@ionic/angular-toolkit": "^12.3.0",
     "@tsconfig/cypress": "^1.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.19.3",
