--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,9 @@
       "prefix": "app",
       "schematics": {},
       "architect": {
+        
         "build": {
+          
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": {
@@ -38,7 +40,7 @@
                 "output": "./svg"
               },
               "src/manifest.webmanifest",
-              "src/manifest.webmanifest"
+              "src/mockServiceWorker.js"
             ],
             "styles": [
               "src/theme/variables.scss",
