--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dom-to-image": "^2.6.0",
     "jsbarcode": "^3.11.5",
     "jspdf": "^2.5.1",
+    "msw": "^2.12.2",
     "ngx-webcam": "^0.4.1",
     "pdfmake": "^0.2.9",
     "phonegap-plugin-barcodescanner": "^8.1.0",
@@ -92,5 +93,10 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "msw": {
+    "workerDirectory": [
+      "src"
+    ]
+  }
 }
